--- a/languages/i18n/en.json
+++ b/languages/i18n/en.json
@@ -603,10 +603,13 @@
 	"passwordreset-emailelement": "Username:\n$1\n\nTemporary password:\n$2",
 	"passwordreset-emailsentemail": "If this email address is associated with your account, then a password reset email will be sent.",
 	"passwordreset-emailsentusername": "If there is an email address associated with this username, then a password reset email will be sent.",
+	"passwordreset-success": "You have a requested a password reset.",
+	"passwordreset-success-details-generic": "If the information submitted is valid, a password reset email will be sent. If you haven't received an email, we recommend that you visit the [[mw:Special:MyLanguage/Help:Reset_password|reset password help page]] or try again later. You can only <strong>request a limited number of password resets within a short period of time. Only one password reset email will be sent per valid account every {{PLURAL:$1|hour|$1 hours}}</strong> in order to prevent abuse.",
+	"passwordreset-success-info": "The details you submitted are: $1",
+	"passwordreset-emailtext-require-email": "However, if you did not generate this request and want to prevent unsolicited\nemails, you may want to update your email options at\n$1.\nYou can require both username and email address to generate password reset\nemails. This may reduce the number of such incidents.",
 	"passwordreset-nocaller": "A caller must be provided",
 	"passwordreset-nosuchcaller": "Caller does not exist: $1",
 	"passwordreset-ignored": "The password reset was not handled. Maybe no provider was configured?",
-	"passwordreset-invalidemail": "Invalid email address",
 	"passwordreset-nodata": "Neither a username nor an email address was supplied",
 	"passwordreset-username-email-required": "Both username and email address are required to receive a temporary password via email.",
 	"changeemail": "Change or remove email address",
@@ -688,7 +691,7 @@
 	"userpage-userdoesnotexist": "User account \"$1\" is not registered.\nPlease check if you want to create/edit this page.",
 	"userpage-userdoesnotexist-view": "User account \"$1\" is not registered.",
 	"blocked-notice-logextract": "This user is currently blocked.\nThe latest block log entry is provided below for reference:",
-	"clearyourcache": "<strong>Note:</strong> After saving, you may have to bypass your browser's cache to see the changes.\n* <strong>Firefox / Safari:</strong> Hold <em>Shift</em> while clicking <em>Reload</em>, or press either <em>Ctrl-F5</em> or <em>Ctrl-R</em> (<em>⌘-R</em> on a Mac)\n* <strong>Google Chrome:</strong> Press <em>Ctrl-Shift-R</em> (<em>⌘-Shift-R</em> on a Mac)\n* <strong>Internet Explorer:</strong> Hold <em>Ctrl</em> while clicking <em>Refresh</em>, or press <em>Ctrl-F5</em>\n* <strong>Opera:</strong> Go to <em>Menu → Settings</em> (<em>Opera → Preferences</em> on a Mac) and then to <em>Privacy & security → Clear browsing data → Cached images and files</em>.",
+	"clearyourcache": "<strong>Note:</strong> After saving, you may have to bypass your browser's cache to see the changes.\n* <strong>Firefox / Safari:</strong> Hold <em>Shift</em> while clicking <em>Reload</em>, or press either <em>Ctrl-F5</em> or <em>Ctrl-R</em> (<em>⌘-R</em> on a Mac)\n* <strong>Google Chrome:</strong> Press <em>Ctrl-Shift-R</em> (<em>⌘-Shift-R</em> on a Mac)\n* <strong>Internet Explorer / Edge:</strong> Hold <em>Ctrl</em> while clicking <em>Refresh</em>, or press <em>Ctrl-F5</em>\n* <strong>Opera:</strong> Go to <em>Menu → Settings</em> (<em>Opera → Preferences</em> on a Mac) and then to <em>Privacy & security → Clear browsing data → Cached images and files</em>.",
 	"usercssyoucanpreview": "<strong>Tip:</strong> Use the \"{{int:showpreview}}\" button to test your new CSS before saving.",
 	"userjsonyoucanpreview": "<strong>Tip:</strong> Use the \"{{int:showpreview}}\" button to test your new JSON before saving.",
 	"userjsyoucanpreview": "<strong>Tip:</strong> Use the \"{{int:showpreview}}\" button to test your new JavaScript before saving.",
@@ -2598,6 +2601,8 @@
 	"sp-contributions-footer-anon": "-",
 	"sp-contributions-footer-anon-range": "-",
 	"sp-contributions-outofrange": "Unable to show any results. The requested IP range is larger than the CIDR limit of /$1.",
+	"sp-contributions-concurrency-user": "Sorry, too many requests are being made from your user account. Please try again later.",
+	"sp-contributions-concurrency-ip": "Sorry, too many requests are being made from your IP address. Please try again later.",
 	"whatlinkshere": "What links here",
 	"whatlinkshere-title": "Pages that link to \"$1\"",
 	"whatlinkshere-summary": "",
